--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     align-items: center;
     justify-content: center;
 
-    background-color: #222;
+    background-color: #7db69b;
     background-size: cover;
     background-repeat: no-repeat;
 }
